kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envprinter-service
spec:
  type: NodePort
  selector:
    app: envprinter
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
